--- a/style.css
+++ b/style.css
@@ -12,12 +12,18 @@ body {
 
   background-color: burlywood;
   display: flex;
-  flex-wrap: wrap;
-  
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.grid-row {
+  display: flex;
+  justify-content: space-between;
 }
 
 .grid-square {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-color: peru;
   box-sizing: border-box;
 }
